# Tiny-Game-Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  resources.rc
examples/: getting_started.lua  input.lua  pong.lua  snake.lua  sound.lua  sprites.lua  tetris.lua  tgf.tmd  threedee.lua
src/: 3DRendering.cpp  3DRendering.h  Animator.cpp  Animator.h  AudioSystem.cpp  AudioSystem.h  DefaultFont.h  Font.cpp  Font.h  Fx.cpp  Fx.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Log.h  Lua.cpp  Lua.h  Model.cpp  Model.h  Rect.cpp  Rect.h  Types.cpp  Types.h  Vector.cpp  Vector.h  sol.cpp  tmd.h
src/stb/: stb.cpp
tools/: tgf_export_obj.py
